# thunderbird-cli-bridge

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: thunderbird-api-reference.md
extension/: background.js  manifest.json
native-host/: tbcli_host.bat  tbcli_host.json  tbcli_host.py
tbcli/: __init__.py  __main__.py  bridge.py  cli.py  output.py
