[project]
name = "tbcli"
version = "1.0.0"
description = "Thunderbird CLI Bridge — CLI access to Thunderbird mail APIs"
requires-python = ">=3.10"

[project.scripts]
tbcli = "tbcli.cli:main"

[tool.setuptools.packages.find]
include = ["tbcli*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
